k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-svc
  namespace: shopping-planning
spec:
  selector:
    app: shopping-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30082   # 30080: household-budget, 30081: 使用中
  type: NodePort
